--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -130,6 +130,9 @@
             position: sticky;
             top: 0;
             z-index: 999;
+            .menu--mobile-float {
+                background-color: $white;
+            }
         }
         .hamburger {
             cursor: pointer;
